kogito-dmn-simple-rule/yaml-manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "2"
    image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"my-application:latest","namespace":"pbrown-dev"},"fieldPath":"spec.template.spec.containers[?(@.name==\"my-application\")].image"}]'
    openshift.io/generated-by: OpenShiftNewApp
  labels:
    app: my-application
    app.kubernetes.io/component: my-application
    app.kubernetes.io/instance: my-application
    app.kubernetes.io/name: my-application
  name: my-application
  namespace: pbrown-dev
spec:
  progressDeadlineSeconds: 600
  replicas: 0
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      deployment: my-application
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        openshift.io/generated-by: OpenShiftNewApp
      creationTimestamp: null
      labels:
        deployment: my-application
    spec:
      containers:
      - image: image-registry.openshift-image-registry.svc:5000/pbrown-dev/my-application@sha256:2d3c685fa33ef5be9f6501b03de4b67445e0e044ec21eff20689b747991d06a2
        imagePullPolicy: IfNotPresent
        name: my-application
        ports:
        - containerPort: 8080
          protocol: TCP
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
