kogito-dmn-simple-rule/yaml-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftNewApp
  labels:
    app: simple-dmn-rule
    app.kubernetes.io/component: simple-dmn-rule
    app.kubernetes.io/instance: simple-dmn-rule
  name: simple-dmn-rule
  namespace: dmn-simple
spec:
  clusterIP: 172.30.247.30
  clusterIPs:
  - 172.30.247.30
  ports:
  - name: 8080-tcp
    port: 8080
  - name: 8443-tcp
    port: 8443
  - name: 8778-tcp
    port: 8778
  selector:
    deployment: simple-dmn-rule
